--- a/client/src/components/style.module.css
+++ b/client/src/components/style.module.css
@@ -34,16 +34,7 @@
 	font-family: arial;
 }
 
-.iconsContainer > a > svg {
-	margin: 0.5rem;
-	font-size: 1.75rem;
-}
-.iconsContainer > a :hover {
-	transform: scale(0.95);
-	cursor: pointer;
-	transition: all 0.5s;
-	color: white;
-}
+
 .animateText {
 	width: 80%;
 }
@@ -306,11 +297,39 @@
 }
 
 /* Services Styles */
+
 .textBlock {
 	color: #607d8b;
 }
-
-
+/* Blogs */
+.blog__welcome {
+	margin-top: 1rem;
+	border-radius: 1rem;
+	padding: 2.5rem;
+	background: #607d8b24;
+	position: relative;
+	text-align: center;
+}
+.blog__welcome p {
+	font-size: 18px;
+	color: #0f252f;
+}
+.blog__welcome .left,
+.blog__welcome .right {
+	position: absolute;
+	font-size: 2.5rem;
+	color: #607d8b69;
+}
+.blog__welcome .left {
+	transform: rotate(180deg);
+	top: 10px;
+	left: 10px;
+}
+.blog__welcome .right {
+	float: right;
+	bottom: 10px;
+	right: 10px;
+}
 @media only screen and (max-width: 768px) {
 	.middleContainer {
 		width: 70%;
@@ -390,5 +409,9 @@
 	}
 	.contactAddress .item .icon > svg {
 		font-size: 3rem;
+	}
+	/* Services */
+	.services {
+		padding: 6px 0px !important;
 	}
 }
